--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "85b7f81f",
    "metadata": {},
    "outputs": [
@@ -10,19 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
-      "┌ Warning: GPU backend not available: MethodError(Metal.MTL.devices, (), 0x0000000000006b1a)\n",
-      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchEnzyme.jl:31\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "quasiNumericalOperatorConstruction (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -38,9 +27,9 @@
     "using Profile, StatProfilerHTML\n",
     "\n",
     "\n",
-    "include(\"../src/imageReader.jl\") # read 2D images for models\n",
+    "Revise.includet(\"../src/imageReader.jl\") # read 2D images for models\n",
     "\n",
-    "include(\"../src/OPTwrappers.jl\") \n"
+    "Revise.includet(\"../src/OPTwrappers.jl\") \n"
    ]
   },
   {
@@ -657,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "1122af9d",
    "metadata": {},
    "outputs": [
@@ -666,7 +655,10 @@
      "output_type": "stream",
      "text": [
       "pointsIndices = availablePointsConfigurations[iConfigGeometry] = [[1, 1, 1] [1, 2, 1] [1, 3, 1]; [2, 1, 1] [2, 2, 1] [2, 3, 1]; [3, 1, 1] [3, 2, 1] [3, 3, 1];;; [1, 1, 2] [1, 2, 2] [1, 3, 2]; [2, 1, 2] [2, 2, 2] [2, 3, 2]; [3, 1, 2] [3, 2, 2] [3, 3, 2];;; [1, 1, 3] [1, 2, 3] [1, 3, 3]; [2, 1, 3] [2, 2, 3] [2, 3, 3]; [3, 1, 3] [3, 2, 3] [3, 3, 3]]\n",
-      "middleLinearν = centrePointConfigurations[iConfigGeometry] = 14\n"
+      "middleLinearν = centrePointConfigurations[iConfigGeometry] = 14\n",
+      "modifiedμ[iCoord] = output[\"modμ\"] = Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n",
+      "modifiedμ[iCoord] = output[\"modμ\"] = Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n",
+      "modifiedμ[iCoord] = output[\"modμ\"] = Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n"
      ]
     }
    ],
